--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     </div><!-- /.container-fluid -->
   </nav>
   <!--termina navbar-->
+  <div class="hamburguer">
+    <button type="button" class="navbar-toggle collapsed col-xs-pull-10" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
 
 <!--inicia contenedor general-->
     <div class="container-fluid">
@@ -51,13 +59,21 @@
 
              <p><a class="btn btn-primary btn-lg boton" href="#" role="button">Conviértete en un conductor</a></p>
           </div>
+          <!--version mobile-->
+          <div class="row">
+           <div class="visible-xs col-xs-9 col-xs-offset-3 card align">
+             <div class="col-xs-8 col-xs-offset-1">
+               <h1>Comienza a viajar con <img src="assets/images/logoBlanco.png"alt=""></h1>
+               <div class="">
+                 <p><a class="btn btn-primary btn-lg boton margin-input">Descarga la app</a></p>
+               </div>
+             </div>
+           </div>
+          </div>
         </div>
     </div>
 <!-- termina primera seccion-->
-             <!--version mobile-->
-             <div class="visible-xs col-xs-9 col-xs-offset-3">
-               <h1>Comienza a viajar con <img src="assets/images/logoBlanco.png"alt=""></h1>
-             </div>
+
              <!--inicia modal-1-->
                <div class="modal fade" id="ventana1">
                  <div class="modal-dialog">
@@ -128,7 +144,6 @@
            </div>
            <div class="col-md-12">
              <p><a class="btn btn-primary btn-lg boton-2" href="#ventana3" role="button" data-toggle="modal">Conviértete en conductor</a></p>
-
            </div>
         </div>
       </div>
@@ -139,20 +154,27 @@
         <div class="row">
           <div class="col-md-12 yellow">
             <div class="row">
-              <div class="col-md-offset-2 col-md-6 color-white">
+              <div class="col-md-offset-2 col-md-5 color-white">
                 <h3>Tarifas</h3>
                 <h4>Consulta las tarifas LabCar aquí</h4>
                 <div class="row">
                   <label for="origin-input"><img src="assets/images/shape.png" alt="Pickup location"></label>
-                  <input class="style-input margin-input" type="text" name="" value="">
+                  <input class="style-input margin-input" type="text" placeholder="  Ingrese su punto de partida">
                 </div>
                 <div class="row">
                   <label for="destination-input"><img src="assets/images/shape2.png" alt="Destination"></label>
-                  <input class="style-input" type="text" name="" value="">
+                  <input class="style-input" type="text" placeholder="  Ingrese su destino">
+                </div>
+                <div class=" col-md-12 margin-input">
+                  <button type="button" class="btn btn-primary boton" id="button-ruta" >¡TRAZAR LA RUTA!</button>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div id="map"></div>
+              <div class="col-md-4">
+                <div class="border-map col-md-12">
+                  <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.8172156818423!2d-99.16530268509351!3d19.420301986891356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff41d4c73813%3A0xd1c6f4fcad149f54!2sLaboratoria+Coding!5e0!3m2!1ses!2smx!4v1516053566152" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -162,7 +184,7 @@
         <!--inicia el footer-->
         <div class="row footer">
           <div class="col-md-10 col-md-offset-1 footer-border">
-            <div class="col-md-3">
+            <div class="col-md-3 footer-icons">
               <img class="icon" src="assets/images/facebook.png" alt="">
               <img class="icon" src="assets/images/twitter.png" alt="">
               <img class="icon" src="assets/images/linkedin2.png" alt="">
@@ -193,14 +215,15 @@
                 <li role="presentation"><a class="color" href="#">Coders</a></li>
               </ul>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 footer-icons-2">
               <img src="assets/images/appstore.png" alt="">
-              <img src="assets/images/enBadgeWebGeneric.png" alt="">
+              <img class="margin-input"src="assets/images/enBadgeWebGeneric.png" alt="">
             </div>
           </div>
+          <div class="col-md-5 col-md-offset-1 footer-copyrigth">
+            <p class="color">&#169; 2017 LabCar technologies Inc </p>
+          </div>
         </div>
-
-
 </div>
 
 
