--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div><!-- /.container-fluid -->
   </nav>
   <!--termina navbar-->
-  <div class="hamburguer">
+<!--  <div class="hamburguer">
     <button type="button" class="navbar-toggle collapsed col-xs-pull-10" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-  </div>
+  </div> -->
 
 <!--inicia contenedor general-->
     <div class="container-fluid">
